Реализована возможность запуска тестов в контейнерах - добавлены Testcontainers для Kafka и базы данных. Переезд c 17 на 22 Java.